Fixed spacing issues with nav

--- a/talentdashboard/static/css/scoutmap/app/navigation.less
+++ b/talentdashboard/static/css/scoutmap/app/navigation.less
@@ -123,21 +123,21 @@ nav {
     }	
 }
 .subnav-reports {
-	top: 290px;
+	top: 268px;
 
     @media only screen and (max-width : 640px) {
         top: 43px;
     }	
 }
 .subnav-settings {
-	top: 399px;
+	top: 334px;
 
     @media only screen and (max-width : 640px) {
         top: 43px;
     }		
 }
 .subnav-search {
-	top: 465px;
+	top: 400px;
 
     @media only screen and (max-width : 640px) {
         top: 43px;
@@ -163,12 +163,6 @@ nav {
 	ul {
 		padding: 5px 20px;
 	}
-}
-
-.my-team-title {
-	margin: 0 -10px;
-    padding: 10px 10px 10px;
-    color: #fff;
 }
 
 
@@ -247,4 +241,10 @@ nav {
 	overflow-x: hidden;
     height: 400px;
     overflow-y: scroll;
+}
+
+.subnav .my-team-title {
+	margin: 0 -10px;
+    padding: 10px 10px 10px;
+    color: #fff;
 }
